<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamesFragment">

    <!-- TextView to show current coins -->
    <TextView
        android:id="@+id/tvCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coins: "
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RadioGroup for game types -->
    <RadioGroup
        android:id="@+id/rgGameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCoins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/rbTwoAlike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="2 Alike" />
        <RadioButton
            android:id="@+id/rbThreeAlike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="3 Alike" />
        <RadioButton
            android:id="@+id/rbFourAlike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4 Alike" />
    </RadioGroup>

    <!-- EditText for the wager input -->
    <EditText
        android:id="@+id/etWager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Enter wager"
        app:layout_constraintTop_toBottomOf="@+id/rgGameType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Button to start the game -->
    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="GO"
        app:layout_constraintTop_toBottomOf="@+id/etWager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Dice buttons -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:rowCount="2"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@+id/btnGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/dice1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="6"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rectangle"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dice2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="6"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rectangle"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dice3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="5"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rectangle"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dice4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="6"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rectangle"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </GridLayout>

    <!-- Info button -->
    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="INFO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGo" />
</androidx.constraintlayout.widget.ConstraintLayout>