<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="btn_games" type="id"/>
    <item name="txt_balance" type="id"/>
</resources>
